# booktrack-fastapi

./: .dockerignore  .gitignore  NOTAS_PROJETO.md  README.md  REFATORACAO_JWT.md  docker-compose.yml  migrate_csv_to_db.py  pyproject.toml  report_jwt.md
booktrack_fastapi/: app.py  example_main.py  main.py  models.py
booktrack_fastapi/core/: database.py  security.py
booktrack_fastapi/models/: __init__.py  associations.py  authors.py  books.py  categories.py  collections.py  formats.py  properties.py  publishers.py  reading.py  reading_status.py  readings.py  shelves.py  tags.py  users.py
booktrack_fastapi/repositories/: authors_repo.py  books_repo.py  categories_repo.py  example.py  properties_repo.py  readings_repo.py
booktrack_fastapi/routers/: auth.py  authors.py  books.py  categories.py  properties.py  readings.py  users.py
booktrack_fastapi/schemas/: authors.py  books.py  categories.py  properties.py  readings.py  users.py
booktrack_fastapi/services/: authors_service.py  books_service.py  categories_service.py  properties_service.py  readings_service.py
booktrack_fastapi/utility/: date_tools.py  tools.py
data/: .~lock.minha-biblioteca-leituras.csv#  minha-biblioteca-leituras.csv
docs/: NOTAS_PROJETO.md  schedule.md
init-db/: create_tables.sql  create_view.sql  create_view_book.sql  create_view_reading.sql  insert_tables.sql
migrations/: env.py
tests/: conftest.py  exameple_test_app.py  example_test_app.py  example_test_db.py  test_app.py  test_auth.py  test_db.py  test_properties.py  test_readings.py  test_security.py
(+8 files in other folders)
